library add, id changes on stu

--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
         </div>
   </div>
   <!--end return block-->
-     <!--row various supports-->
+  <!--row various supports-->
   <div class="row app-row" id="support">
     <div class="col-md-12">
       <h2>Support</h2>
@@ -703,6 +703,13 @@
               <li><a href="https://rampages.us/digitalsimulations2/">Digital Simulations - Part 2 </a></li> 
             </ul>
         </li>
+      </ul>
+    </div>
+    <div class="col-md-8">
+      <h3 id="library">VCU Library</h3>
+      <ul>
+        <li><a href="https://www.library.vcu.edu/covid19/" target="_blank" rel="noopener" data-saferedirecturl="https://www.google.com/url?q=https://www.library.vcu.edu/covid19/&amp;source=gmail&amp;ust=1584489002675000&amp;usg=AFQjCNF1l_3HzB_INcws7iykp-FWGrDppQ">VCU Libraries Operations for COVID-19</a>. This page provides a high-level overview of all library operations related to the university's COVID-19 response, linking out to other content as necessary.</li>
+        <li><a href="https://guides.library.vcu.edu/continuity/" target="_blank" rel="noopener" data-saferedirecturl="https://www.google.com/url?q=https://guides.library.vcu.edu/continuity/&amp;source=gmail&amp;ust=1584489002675000&amp;usg=AFQjCNHOW0SN-4KJaAqEk2S-GnRVRUh1tw">VCU Libraries Instruction and Research Support: COVID-19</a>. This is a more detailed guide on services that will be useful for both faculty and students, but leans a little more towards faculty with a strong focus on how we can integrate into and support online/distance coursework from a collections and instructional perspective.</li>
       </ul>
     </div>
     <div class="col-md-8">
