--- a/students/index.html
+++ b/students/index.html
@@ -50,7 +50,7 @@
                 </div>                
             </div>
             <!--row nav-->
-            <div class="row" id="tools">
+            <div class="row" id="know-more">
               <div class="col-md-12">
                 <h2>What do you want to know more about?</h2>
               </div>
@@ -101,7 +101,7 @@
                  <!--return block-->
                 <div class="return-block">
                       <div>
-                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                        <a href="#know-more"><span class="up">&uarr;</span>return to know more</a>
                       </div>
                       <div>
                         <a href="#top"><span class="up">&uarr;</span>return to top</a>
@@ -122,7 +122,7 @@
              <!--return block-->
                 <div class="return-block">
                       <div>
-                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                        <a href="#know-more"><span class="up">&uarr;</span>return to know more</a>
                       </div>
                       <div>
                         <a href="#top"><span class="up">&uarr;</span>return to top</a>
@@ -160,7 +160,7 @@
                    <!--return block-->
                 <div class="return-block">
                       <div>
-                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                        <a href="#know-more"><span class="up">&uarr;</span>return to know more</a>
                       </div>
                       <div>
                         <a href="#top"><span class="up">&uarr;</span>return to top</a>
@@ -199,7 +199,7 @@
                    <!--return block-->
                 <div class="return-block">
                       <div>
-                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                        <a href="#know-more"><span class="up">&uarr;</span>return to know more</a>
                       </div>
                       <div>
                         <a href="#top"><span class="up">&uarr;</span>return to top</a>
@@ -226,7 +226,7 @@
                  <!--return block-->
                 <div class="return-block">
                       <div>
-                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                        <a href="#know-more"><span class="up">&uarr;</span>return to know more</a>
                       </div>
                       <div>
                         <a href="#top"><span class="up">&uarr;</span>return to top</a>
@@ -250,7 +250,7 @@
                  <!--return block-->
                 <div class="return-block">
                       <div>
-                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                        <a href="#know-more"><span class="up">&uarr;</span>return to know more</a>
                       </div>
                       <div>
                         <a href="#top"><span class="up">&uarr;</span>return to top</a>
@@ -268,7 +268,7 @@
                  <!--return block-->
                 <div class="return-block">
                       <div>
-                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                        <a href="#know-more"><span class="up">&uarr;</span>return to know more</a>
                       </div>
                       <div>
                         <a href="#top"><span class="up">&uarr;</span>return to top</a>
@@ -287,7 +287,7 @@
                  <!--return block-->
                 <div class="return-block">
                       <div>
-                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                        <a href="#know-more"><span class="up">&uarr;</span>return to know more</a>
                       </div>
                       <div>
                         <a href="#top"><span class="up">&uarr;</span>return to top</a>
@@ -301,7 +301,7 @@
                  <!--return block-->
                 <div class="return-block">
                       <div>
-                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                        <a href="#know-more"><span class="up">&uarr;</span>return to know more</a>
                       </div>
                       <div>
                         <a href="#top"><span class="up">&uarr;</span>return to top</a>
@@ -322,7 +322,7 @@
                  <!--return block-->
                 <div class="return-block">
                       <div>
-                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                        <a href="#know-more"><span class="up">&uarr;</span>return to know more</a>
                       </div>
                       <div>
                         <a href="#top"><span class="up">&uarr;</span>return to top</a>
@@ -340,7 +340,7 @@
                   <!--return block-->
                 <div class="return-block">
                       <div>
-                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                        <a href="#know-more"><span class="up">&uarr;</span>return to know more</a>
                       </div>
                       <div>
                         <a href="#top"><span class="up">&uarr;</span>return to top</a>
@@ -363,7 +363,7 @@
                  <!--return block-->
                 <div class="return-block">
                       <div>
-                        <a href="#tools"><span class="up">&uarr;</span>return to know more</a>
+                        <a href="#know-more"><span class="up">&uarr;</span>return to know more</a>
                       </div>
                       <div>
                         <a href="#top"><span class="up">&uarr;</span>return to top</a>
