covid info change

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/main.css?ver=2.2">
+        <link rel="stylesheet" href="css/main.css?ver=2.3">
     </head>
     <body id="top">
       <!--this is an evolving document - it is only a few days old - be kind to it and the intent of the authors-->
@@ -34,7 +34,7 @@
 
             <p>Please share these <a href="https://altlab.vcu.edu/rapid-response/students">Keep Learning student support resources with your students.</a></p>
 
-            <p>Read the <a href="https://provost.vcu.edu/covidguidance/"><em>Coronavirus management at VCU: current instructional guidance for faculty</em></a> message from Provost Hackett and Dr. Buckley.</p>
+            <p><a href="https://covid-19.vcu.edu/">Keep up to date on all COVID-19 communication from VCU.</a></p>
 
             <h2 id="continuity">The Goal = Academic Continuity</h2>
 
