--- a/students/index.html
+++ b/students/index.html
@@ -10,7 +10,7 @@
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/main.css?ver=2.2">
+        <link rel="stylesheet" href="../css/main.css?ver=2.3">
     </head>
     <body>
       <!--this is an evolving document - it is only a two days old - be kind to it and the intent of the authors-->
@@ -112,7 +112,7 @@
                   <h2>Accurate and updated info on COVID-19</h2>
                 </div>
                 <div class="col-md-8">
-                  <p>There is a lot of bad information out there on social media. We want you to stay informed with truly accurate information on the current COVID-19 situation. President Rao has been providing regular updates via email and on the <a href="https://blogs.vcu.edu/covid-19-coronavirus/">VCU COVID-19 website</a> dedicated to keeping us all informed. </p>
+                  <p>There is a lot of bad information out there on social media. We want you to stay informed with truly accurate information on the current COVID-19 situation. President Rao has been providing regular updates via email and on the <a href="https://covid-19.vcu.edu/">VCU COVID-19 website</a> dedicated to keeping us all informed. </p>
                 </div>
                 <div class="col-md-8" id="group">
                   <h2>Working Together on Group Projects</h2>
