--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
                   <p>Wifi/internet access:  employees and students can add “hot spots” to their wireless cellphone plans or access VCU SafeNet while being in your car in/around the VCU campuses.  </p>  
                   <p>A number of companies are offering both reduced cost and increased bandwidth options.</p>   <ul>  
                     <li><a href="https://docs.fcc.gov/public/attachments/DOC-363033A1.pdf">FCC agreement</a> stating that providers will waive late fees, not cutoff service for lack of payment, and open hot-spots</li>              
-                    <li><a rhre="https://corporate.comcast.com/press/releases/internet-essentials-low-income-broadband-coronavirus-pandemic">Comcast</a> - free 60 days for new families and $9.95 a month</li>
+                    <li><a href="https://corporate.comcast.com/press/releases/internet-essentials-low-income-broadband-coronavirus-pandemic">Comcast</a> - free 60 days for new families and $9.95 a month</li>
                     <li><a href="https://www.internetessentials.com/">Internet Essentials</a> - $9.95 a month with no contract</li>
                     <li><a href="https://corporate.charter.com/newsroom/charter-to-offer-free-access-to-spectrum-broadband-and-wifi-for-60-days-for-new-K12-and-college-student-households-and-more?fbclid=IwAR2gnofDvDNanY-GtJfzXzKxqITVILRVRkeljA5ofwvDi1VSMa1_cGjrtqE" target="_blank" rel="noopener nofollow" data-lynx-mode="asynclazy" data-lynx-uri="https://l.facebook.com/l.php?u=https%3A%2F%2Fcorporate.charter.com%2Fnewsroom%2Fcharter-to-offer-free-access-to-spectrum-broadband-and-wifi-for-60-days-for-new-K12-and-college-student-households-and-more%3Ffbclid%3DIwAR2gnofDvDNanY-GtJfzXzKxqITVILRVRkeljA5ofwvDi1VSMa1_cGjrtqE&amp;h=AT15zyRAfG5E1joLEomYYHI72A8H4b_lFcZoqR-7izdEcU0UGOGh5M8kNhkXg33ePKDTapEAf7UupGLS5Djt_fF_t3Q5zlwprgmBL8wFZ3q8I-iYDBoAHzp3BqiR8kQ0IKWsNy8ogX1WrSVlvuNxAY8">Charter Free Internet offer for 2 months.</a><a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fabout.att.com%2Fpages%2FCOVID-19.html%3Ffbclid%3DIwAR2yQmaIWseB2AP60bQ2VI9JwWHht88_UsjJneOu6kpk7J_XJr3mK8AmRWc&amp;h=AT2yw0pvq6ko6VuVPOaP_M1wOMuSlqOMh5g2hiF9flMc187XmSwpvlssyveVdSHb_ogcf-uYN999udhCqIDJDJV6ykWFM3_9T0FhdKcezN8K50gVwJ9X8KqfErsq1q3VgSBiUh3KSbm1VbQ8Sy7Edso" target="_blank" rel="noopener nofollow" data-lynx-mode="asynclazy">AT&amp;T COVID-19 response</a>: offers open hot-spots, unlimited data to existing customers, and $10/month plans to low income families.</li>
                     <li><a href="https://www.verizon.com/about/news/our-response-coronavirus?fbclid=IwAR2wCK5wkGFykCF9vAfMi9gWMLWuxOUxuJcuzXKTySVY9zfw8TYijPrm8Gc" target="_blank" rel="noopener nofollow" data-lynx-mode="asynclazy" data-lynx-uri="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.verizon.com%2Fabout%2Fnews%2Four-response-coronavirus%3Ffbclid%3DIwAR2wCK5wkGFykCF9vAfMi9gWMLWuxOUxuJcuzXKTySVY9zfw8TYijPrm8Gc&amp;h=AT3mqxRKDuj7aopIiRzcJY7WIxn-IOOzFerM-H7cn_rPmKzIN0rpeNKF3xyXJE85nU7d3AISLKESW-sjeW_5hrd2niZyM8lxsD-QI_-Jz5u-NJ7S6M2naO6IE9cH592LervilPFuNJbdaSFDg5jkBBw">Verizon COVID-19 response</a>: no special offers, but following the FCC agreement.</li>
@@ -824,7 +824,6 @@
   </div>
 </div>
 
-  </div>
   <!--end support row-->
  
 
