open graph corrections

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Keep on Teaching at VCU</title>
         <meta property="og:title" content="Keep on Teaching at VCU" />
-        <meta property="og:type" content="" />
+        <meta property="og:type" content="website" />
         <meta property="og:url" content="https://altlab.vcu.edu/rapid-response/" />
-        <meta property="og:image" content="https://altlab.vcu.edu/rapid-response/imgs/main.jpg" />
+        <meta property="og:image" content="https://altlab.vcu.edu/rapid-response/imgs/main.png" />
+        <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="1357" />
         <meta property="og:image:height" content="1357" />
+        <meta property="og:image:alt" content="The VCU Seal." />
+        <meta property="og:description" content="Resources to help VCU faculty during the COVID-19 transition." /> 
+
 
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
