--- a/students/index.html
+++ b/students/index.html
@@ -4,6 +4,15 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Keep on Learning at VCU</title>
+         <meta property="og:title" content="Keep on Learning at VCU" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://altlab.vcu.edu/rapid-response/students" />
+        <meta property="og:image" content="https://altlab.vcu.edu/rapid-response/imgs/main.png" />
+        <meta property="og:image:type" content="image/png" />
+        <meta property="og:image:width" content="1357" />
+        <meta property="og:image:height" content="1357" />
+        <meta property="og:image:alt" content="The VCU Seal." />
+        <meta property="og:description" content="Resources to help VCU students during the COVID-19 transition." /> 
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,6 +30,7 @@
                      <p>Sometimes the unexpected happens. When it does, VCU will be prepared to keep on teaching and keep on learning. Were we to have a blizzard or some other surprise event, no doubt we will eventually experience a moment where all in-person courses will need to transition to a remote format. Don’t worry! Your professors will do everything they can to make sure your course stays on track.</p>
                      <h2>The Goal = Keep Learning</h2>
                      <p>This toolkit was developed to provide students resources and support as they keep learning. The tips, tools, and resources below are here to support students with unexpected transition to remote learning and promote course completion. As outlined below, VCU aims to approach all aspects of academic continuity with flexibility, care, compassion, kindness, creativity, and positivity.</p>
+                     <p>Check out these specific <a href="https://clc.vcu.edu/learningonline/">tips for learning online.</a></p>
                      <h2>The Ram Frame of Mind</h2>
                      <p>
                          <strong>Be well</strong>- Our main priority is your health! Please check out the health tips and FAQs on the <a href="https://health.students.vcu.edu/">VCU University Health Services</a>. 
