zoom license update

--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
                <p><a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request&business_hours_support=Yes&contact_type=Zoom">Click here to request a virtual meeting </a> at any point 8AM-10PM Monday-Friday or ask a question at any time.</p>                         
 
                <p>You can also <a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request">request transition support online and/or after normal business hours here.</a></p>
+               <h2 id="zoom-update">Zoom Update</h2>
+               <p>
+                 As of March 18th, all VCU Zoom accounts are being issued as "Licensed." You no longer have to fill out a request ticket: simply log in at <a href="http://vcu.zoom.us/" target="_blank" rel="noopener noreferrer" data-saferedirecturl="https://www.google.com/url?q=http://vcu.zoom.us&amp;source=gmail&amp;ust=1584623381705000&amp;usg=AFQjCNHS_sRzkaD3vyqcXUnzIitIugHWrg">vcu.zoom.us</a> with your eID and VCU password to have an account provisioned.</p>
+
+                <p>If you already have a free account, please log in again at the <a href="http://vcu.zoom.us/">portal</a> to be upgraded to "Licensed."</p>
+
+                <p><a href="https://docs.google.com/document/d/1j_U5Yube0BWZRreVQf4qgAlZ3wBa2uG3chkKDp643QY/edit">Get more Zoom Pro details here.</a>
+               </p>
             </div> 
 
             <p>Please share these <a href="https://altlab.vcu.edu/rapid-response/students">Keep Learning student support resources with your students.</a></p>
