--- a/students/index.html
+++ b/students/index.html
@@ -19,7 +19,7 @@
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/main.css?ver=2.3">
+        <link rel="stylesheet" href="../css/main.css?ver=2.4">
     </head>
     <body>
       <!--this is an evolving document - it is only a two days old - be kind to it and the intent of the authors-->
@@ -30,7 +30,17 @@
                      <p>Sometimes the unexpected happens. When it does, VCU will be prepared to keep on teaching and keep on learning. Were we to have a blizzard or some other surprise event, no doubt we will eventually experience a moment where all in-person courses will need to transition to a remote format. Don’t worry! Your professors will do everything they can to make sure your course stays on track.</p>
                      <h2>The Goal = Keep Learning</h2>
                      <p>This toolkit was developed to provide students resources and support as they keep learning. The tips, tools, and resources below are here to support students with unexpected transition to remote learning and promote course completion. As outlined below, VCU aims to approach all aspects of academic continuity with flexibility, care, compassion, kindness, creativity, and positivity.</p>
-                     <p>Check out these specific <a href="https://clc.vcu.edu/learningonline/">tips for learning online.</a></p>
+                  </div>
+                  <div class="col-md-12">
+                     <h2>Tips for Success When Learning Online</h2>
+                     <div class="row">
+                      <div class="col-md-3">
+                        <a class="img-link" href="https://clc.vcu.edu/learningonline/"><img class="attention" src="../imgs/online_learning.png" alt="An icon representing online learning."></a>
+                      </div>
+                      <div class="col-md-9 my-auto">
+                        <p class="inline-fit">Even if you've been successful with your face-to-face courses, it helps to think about how your academic life is going to change when your courses move online. The Campus Learning Center has created these <a href="https://clc.vcu.edu/learningonline/">tips for learning online.</a> These nine tips will help ease the transition to online learning.</p>
+                      </div>
+                      </div>
                      <h2>The Ram Frame of Mind</h2>
                      <p>
                          <strong>Be well</strong>- Our main priority is your health! Please check out the health tips and FAQs on the <a href="https://health.students.vcu.edu/">VCU University Health Services</a>. 
