provost message update

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
             <p>Please share these <a href="https://altlab.vcu.edu/rapid-response/students">Keep Learning student support resources with your students.</a></p>
 
+            <p>If you'd like more information on the <a href="https://docs.google.com/forms/d/e/1FAIpQLSeeW1P18lGvM23Q-LdpUrjvuZF7gu8yk42prYQrBuArFSuEVQ/viewform">My Plan to Keep on Teaching form</a>. Please see <a href="https://www.google.com/url?q=https://provost.vcu.edu/virus/forminfo/&sa=D&ust=1584573564351000&usg=AFQjCNFsMKj2KfSCJ65d2VJhld5rfOWArg">this message from the Provost</a>.</p>
+
             <p><a href="https://covid-19.vcu.edu/">Keep up to date on all COVID-19 communication from VCU.</a></p>
 
             <h2 id="continuity">The Goal = Academic Continuity</h2>
