--- a/students/index.html
+++ b/students/index.html
@@ -31,7 +31,7 @@
                      <h2>The Goal = Keep Learning</h2>
                      <p>This toolkit was developed to provide students resources and support as they keep learning. The tips, tools, and resources below are here to support students with unexpected transition to remote learning and promote course completion. As outlined below, VCU aims to approach all aspects of academic continuity with flexibility, care, compassion, kindness, creativity, and positivity.</p>
                   </div>
-                  <div class="col-md-12">
+                  <div class="col-md-12" id="online-tips">
                      <h2>Tips for Success When Learning Online</h2>
                      <div class="row">
                       <div class="col-md-3">
