vpn and laptop loaner additions

--- a/students/index.html
+++ b/students/index.html
@@ -229,13 +229,10 @@
                 <div class="col-md-12" id="tech-support">
                   <h2>Technology Support & Resources</h2>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8" id="loaners">
                   <h3>Hardware Needs</h3>
-                  <h4>Laptop Checkout Options</h4>
-                  <h5>James Branch Cabell Library and Tompkins-McCaw Library</h5>
-                  <p>A small fleet of laptops are available for students to check out from the IT Support Center located in the lower level of the James Branch Cabell Library.There are also a few laptops  available at Tompkins-McCaw Library at the service desk. A valid VCU ID card will be required for checkouts.</p>
-                  <h5>University College</h5>
-                  <p>University College has 4 laptops for student check-out. To check them out, students come to Harris 5116, show their student ID, and fill out this form, which is also signed by the UC employee working the front desk. Students are allowed to check out a laptop for one business day.</p>
+                  <h4>Laptop Loans</h4>
+                  <p>VCU is providing a limited number of laptops to assist with online instruction that will be available <i>on loan</i> for students. These laptops will be available on a first-come, first-served basis. The laptops that are being distributed are subject to VCU computing use policies. <a href="https://vcu-it-support-center.appointlet.com/?email=skennedy@apps.vcu.edu&amp;field__scheduler-eid=skennedy" target="_blank" rel="noopener" data-saferedirecturl="https://www.google.com/url?q=https://vcu-it-support-center.appointlet.com/?email%3Dskennedy@apps.vcu.edu%26field__scheduler-eid%3Dskennedy&amp;source=gmail&amp;ust=1584668608986000&amp;usg=AFQjCNFB0V-t-MvnFWDxBZwtOw6bPrmAQQ">Please make an appointment</a> to pick one up <em>Thursday, March 19th</em> or <em>Friday, March 20th</em> in the <a href="https://ts.vcu.edu/it-support-center/" target="_blank" rel="noopener" data-saferedirecturl="https://www.google.com/url?q=https://ts.vcu.edu/it-support-center/&amp;source=gmail&amp;ust=1584668608986000&amp;usg=AFQjCNGooDBZnRHmCuuM8LBfNA-EoZPzLw">IT Support Center</a> located in the lower level of Cabell Library.</p>
 
                   <h4>Laptop Purchase</h4>
                   <p>If you need to purchase a laptop, computer, tablet, microphone or webcam - consider <a href="https://ramtech.vcu.edu/">RAM</a> Tech (VCU discounts and payroll deduction) or a reputable retailer.  Most laptops now have integrated webcams and wireless headphones usually have integrated microphones in them, which can be used for remote learning.</p>
