tech support addition

--- a/students/index.html
+++ b/students/index.html
@@ -274,12 +274,15 @@
                       </div>
                 </div>
                 <!--end return block-->
-                <div class="col-md-8">
+                <div class="col-md-8" id="live-tech-support">
                   <h3>Technology Support</h3>
                   <ul>
-                    <li><a href="https://ts.vcu.edu/it-support-center/">IT Support (chat, email, phone)</a></li>
-                    <li><a href="https://go.vcu.edu/itsupport">Submit a help ticket</a></li>
-                    <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/blackboard-elearning/">Blackboard help</a> - If you can not find the answer to your questions from the Blackboard Help links on this page, please email <a href="mailto:blackboard@vcu.edu">blackboard@vcu.edu</a>. A support staff member will then contact you as soon as possible.</li>
+                    <li>The IT Support Center on MPC will have limited staff at the walk-up counter through this week and an appointment is needed. After Friday, the walk-up counter service will stop, as the library will be closed to the public.</li>
+                    <li>The IT Support Center on MCV is closed.</li>
+                    <li>The IT Support Center call center (for both campuses) is and will continue to be operational. Due to the volume of calls, people are asked to be patient.</li>
+                    <li>The IT Support Center does have limited hours of chat available.</li>
+                    <li>The most effective and streamlined way of contacting the IT Support Center or for any “enterprise” service support (i.e. Blackboard, Kaltura, VCU Mobile, login issues, etc) is to<a href="https://itsupport.vcu.edu/"> submit a support ticket</a>.</li>
+                    <li>Please encourage students to visit the <a href="https://ts.vcu.edu/it-support-center/">IT Support Center’s website</a> for future updates.</li>
                   </ul>
                 </div>
                  <!--return block-->
