remove chat, some other stuff

--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
       <h3 id="tech">Technical Support</h3>
       <!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#tech" aria-label="mail this">email a link to this section</a></div> -->
       <ul>
-        <li><a href="https://ts.vcu.edu/it-support-center/">IT Support</a> (chat, email, phone)</li>
+        <li><a href="https://ts.vcu.edu/it-support-center/">IT Support</a> (email, phone)</li>
         <li><a href="https://go.vcu.edu/itsupport">Help Tickets</a></li>
         <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/blackboard-elearning/">VCU Blackboard Resources</a> <p>If you can not find the answer to your questions from the Blackboard Help links on this page, please email <a href="mailto:blackboard@vcu.edu?subject=Blackboard Support Request">blackboard@vcu.edu</a>; contact the IT Support Center. A support staff member will then contact you as soon as possible.</p></li>
       </ul>
