--- a/students/index.html
+++ b/students/index.html
@@ -277,7 +277,7 @@
                 <div class="col-md-8" id="live-tech-support">
                   <h3>Technology Support</h3>
                   <ul>
-                    <li>The IT Support Center on MPC will have limited staff at the walk-up counter through this week and an appointment is needed. After Friday, the walk-up counter service will stop, as the library will be closed to the public.</li>
+                    <li>The IT Support Center on MPC will have limited staff at the walk-up counter through this week (March 16-March 20) and an appointment is needed. After Friday, the walk-up counter service will stop, as the library will be closed to the public.</li>
                     <li>The IT Support Center on MCV is closed.</li>
                     <li>The IT Support Center call center (for both campuses) is and will continue to be operational. Due to the volume of calls, people are asked to be patient.</li>
                     <li>The IT Support Center does have limited hours of chat available.</li>
