chopping up support

--- a/index.html
+++ b/index.html
@@ -45,19 +45,20 @@
             </div> 
             <div class="row">
              <div class="col-md-6">
+                   <img class="focus-icon" src="imgs/learning.png" alt="An icon representing teaching.">
                   <h2>Online Instruction Support</h2>
                   <div class="alert-header">In Person</div>
                    <p>March 20th is the final day of face-to-face office hours. <strong>8AM-5PM Friday in room 4102L</strong> of the <a href="https://www.google.com/maps/place/University+Learning+Center,+1000+Floyd+Ave,+Richmond,+VA+23220/@37.5474217,-77.4567296,17z/data=!3m1!4b1!4m5!3m4!1s0x89b1114437a0ac75:0xca1e28fab0d8094d!8m2!3d37.5474217!4d-77.4545409"  target="_blank">Academic Learning Commons (1000 Floyd Avenue)</a>. </p>  
                     
-                  <div class="alert-header">Virtual/Phone</div> 
-                   <p><a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request&business_hours_support=Yes&contact_type=Zoom">Click here to request a virtual meeting </a> at any point 8AM-10PM Monday-Friday or ask a question at any time.</p>                         
-
-                   <p>You can also <a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request">request transition support online and/or after normal business hours here.</a></p>
+                  <div class="alert-header">Zoom/Email/Phone Support</div> 
+                   <a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request">Complete this short form for ALT Lab/Online@VCU support.</a>
+                   <p>Available Monday-Friday, 8:00am-5:00pm, and by appointment outside of those hours.</p>
                  </div>
                  <div class="col-md-6">
-                  <h2>Hardware/Software Support</h2>
+                  <img class="focus-icon" src="imgs/tech.png" alt="An icon representing hardware and software.">
+                  <h2>Technical Support</h2>
                   <p>
-                    
+                    <a href="mailto:ITSC@vcu.edu">ITSC@vcu.edu</a> or (804) 828-2227 
                   </p>
                  </div>
                </div>
