--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
                 <div class="row">
                     <div class="col-md-6">
                         <img class="focus-icon" src="imgs/learning.png" alt="An icon representing teaching.">
-                        <h2>Online Instruction Support</h2>
-                        <div class="alert-header">In Person</div>
-                        <p>March 20th is the final day of face-to-face office hours. <strong>8AM-5PM Friday in room 4102L</strong> of the <a href="https://www.google.com/maps/place/University+Learning+Center,+1000+Floyd+Ave,+Richmond,+VA+23220/@37.5474217,-77.4567296,17z/data=!3m1!4b1!4m5!3m4!1s0x89b1114437a0ac75:0xca1e28fab0d8094d!8m2!3d37.5474217!4d-77.4545409" target="_blank">Academic Learning Commons (1000 Floyd Avenue)</a>. </p>
-                        <div class="alert-header">Zoom/Email/Phone Support</div>
-                        <a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request">Complete this short form for ALT Lab/Online@VCU support.</a>
+                        <h2>Support for Online Instruction</h2>                        
                         <p>Available Monday-Friday, 8:00am-5:00pm, and by appointment outside of those hours.</p>
+                        <a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request">Complete this short form for support from ALT Lab/Online@VCU.</a>
+
                     </div>
                     <div class="col-md-6">
                         <img class="focus-icon" src="imgs/tech.png" alt="An icon representing hardware and software.">
@@ -829,7 +827,15 @@
                 <li><a href="https://docs.google.com/document/d/1eCxyMYAJQc2PqqCH7oXLYwRwcZ-TqcPb_7oBt4BexgA/edit">Community-engaged Teaching and Reflection in Times of Crisis</a></li>
             </ul>
         </div>
-       
+         <!--row ferpa-->
+        <div class="col-md-8">
+            <h3 id="ferpa">Privacy and FERPA Compliance Online</h3>
+            <p>Expectations for student privacy are the same for online and face-to-face classes. As you explore more tools to interact with and provide feedback to your students, you may wonder if you are maintaining privacy for protected student data. As a general rule, rely on <a href="https://ts.vcu.edu/software-center/">university supported tools</a> and understand that grades and other forms of feedback should be transmitted within a dual authenticated system (like the BlackBoard LMS) to ensure FERPA compliance. As you select tools to mediate instructional activities, consider if a similar level of privacy can be maintained that students would expect in a classroom environment. </p>
+
+            <p>You can <a href="https://rar.vcu.edu/media/strategic-enrollment-management/rar/docs/FERPA_Tutorial_2018.pdf">explore FERPA policy and what is protected student information here</a>. </p>
+       </div>
+        <!--end row ferpa-->
+
         <!--row inclusive excellence-->
         <div class="col-md-8">
             <h3 id="inclusive">Statement from VCU’s Inclusive Excellence:</h3>
